# FCM

./: main.py  pyproject.toml
Hos cap/: .env.example  Dockerfile  README.md  check_tokens.py  codestorun.txt  docker-compose.yml  instruction_walkthrough.md  project_readme.md  run.bat  run.sh
Hos cap/app/: main.py
Hos cap/app/core/: codestorun.txt  config.py  database.py  init_db.py  security.py  seed.py
Hos cap/app/models/: device_token.py  notification.py  user.py
Hos cap/app/routes/: appointments.py  auth.py  devices.py  notifications.py
Hos cap/app/schemas/: schemas.py
Hos cap/app/services/: appointment_service.py  notification_service.py
Hos cap/notification-load-test/: README.md  load_test.py
Hos cap/test-frontend/: dashboard.html  doctor-dashboard.html  firebase-messaging-sw.js  index.html  login.html  patient-dashboard.html  styles.css
backup/1/Hos cap/: .gitignore
backup/1/Hos cap/app/: __init__.py  main.py
backup/1/Hos cap/app/core/: config.py  logging.py  seed.py
backup/1/Hos cap/app/models/: device_token.py  user.py
backup/1/Hos cap/app/services/: appointment_service.py  notification_service.py
backup/1/Hos cap/test-frontend/: firebase-messaging-sw.js
backup/2/Hos cap/: FRONTEND_INTEGRATION.md  README.md  requirements.txt
backup/2/Hos cap/app/: main.py
backup/2/Hos cap/app/core/: codestorun.txt  config.py  firebase.py  init_db.py  seed.py
backup/2/Hos cap/app/models/: __init__.py  appointment.py
backup/2/Hos cap/test-frontend/: dashboard.html  firebase-messaging-sw.js  index.html  manifest.json
(+3 files in other folders)
